--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,9 +1,10 @@
 backend:
   name: github
   repo: JacobDFrank/folio
-  
+
 
 media_folder: static/assets
+public_folder: /assets
 
 collections:
   - name: post
