--- a/package.json
+++ b/package.json
@@ -8,15 +8,8 @@
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.46.3",
     "gatsby": "^2.0.76",
     "gatsby-link": "next",
-    "gatsby-plugin-catch-links": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-google-fonts": "^0.0.4",
-    "gatsby-plugin-netlify-cms": "^3.0.9",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sass": "next",
     "gatsby-remark-copy-images": "^0.2.1",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
@@ -25,11 +18,19 @@
     "gatsby-remark-smartypants": "next",
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-remark": "next",
+    "gatsby-plugin-catch-links": "next",
+    "gatsby-plugin-google-analytics": "next",
+    "gatsby-plugin-google-fonts": "^0.0.4",
+    "gatsby-plugin-netlify-cms": "^3.0.9",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sass": "next",
+    "eslint-plugin-flowtype": "^2.46.3",
     "invariant": "^2.2.4",
     "load-script": "^1.0.0",
     "netlify-cms": "^1.6.0",
     "normalize-scss": "^7.0.1",
-    "react": "^16.3.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-mailchimp-subscribe": "^1.1.0",
     "react-responsive": "^4.1.0",
     "sass-rem": "^2.0.1"
